--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ Link Personalizado:<br>
 
 
 <script>
-function voltarAoSite() {
+function voltarAoSite() {  
     window.history.go(-1);
-    
-    window.location.href = document.referrer
+    window.close();
+    //window.location.href = document.referrer;
 }
 
 function test(){
